# evalCirc

./: .gitignore  CMakeLists.txt  EvalCircuit.c  EvalCircuit.h  EvalCircuit.s  Makefile  b28cf.sh  bpw_io.c  bpw_io.h  bpw_io.s  bpw_linux.h  debug.c  evalCirc.c  evalCirc.h  evalcirc.c  evalcircuit.c  evalcircuit.h  getGate.c  getGate.h  getgate.c  output.txt  output2.txt  randomRD.c  randomRD.h  randomrd.c  xtrapbits.h
